--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ edition = "2024"
 
 [dependencies]
 tempfile = "3.20.0"
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
