--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+filetime = "0.2.25"
 tempfile = "3.20.0"
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
