--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2024"
 
 [dependencies]
 filetime = "0.2.25"
+serde = "1.0.219"
+serde_json = "1.0.142"
+serde_yaml = "0.9.34"
 tempfile = "3.20.0"
+thiserror = "2.0.14"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
+toml = "0.9.5"
