--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tempfile = "3.20.0"
 thiserror = "2.0.14"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
 toml = "0.9.5"
+trash = "5.2.2"
