--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2024"
 
 [dependencies]
 filetime = "0.2.25"
-serde = "1.0.219"
+# serde = "1.0.219"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 serde_yaml = "0.9.34"
 tempfile = "3.20.0"
