--- a/fs_ext/Cargo.toml
+++ b/fs_ext/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "2.0.14"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
 toml = "0.9.5"
 trash = "5.2.2"
+walkdir = "2.5.0"
 
 [dev-dependencies]
 fs_ext_test_macros = { path = "../fs_ext_test_macros" }
