--- a/fs_ext/Cargo.toml
+++ b/fs_ext/Cargo.toml
@@ -3,6 +3,10 @@ name = "fs-ext"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+default = ["tokio"]
+tokio = ["dep:tokio"]  
+
 [dependencies]
 filetime = "0.2.25"
 # serde = "1.0.219"
@@ -11,7 +15,7 @@ serde_json = "1.0.142"
 serde_yaml = "0.9.34"
 tempfile = "3.20.0"
 thiserror = "2.0.14"
-tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
+tokio = { version = "1.47.1", optional = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
 toml = "0.9.5"
 trash = "5.2.2"
 walkdir = "2.5.0"
