--- a/fs_ext_test_macros/cargo.toml
+++ b/fs_ext_test_macros/cargo.toml
@@ -8,7 +8,7 @@ publish = false
 proc-macro = true
 
 [dependencies]
-syn = "2"
+syn = { version = "2", features = ["full"] } 
 quote = "1"
 proc-macro2 = "1"
 tempfile = "3.20.0"
