--- a/fs_ext/Cargo.toml
+++ b/fs_ext/Cargo.toml
@@ -22,3 +22,4 @@ walkdir = "2.5.0"
 
 [dev-dependencies]
 fs_ext_test_macros = { path = "../fs_ext_test_macros" }
+serde = { version = "1.0.219", features = ["derive"] }
