--- a/fs_ext/Cargo.toml
+++ b/fs_ext/Cargo.toml
@@ -18,6 +18,7 @@ thiserror = "2.0.14"
 tokio = { version = "1.47.1", optional = true, features = ["macros", "rt-multi-thread", "fs", "io-util", "time"] }
 toml = "0.9.5"
 trash = "5.2.2"
+uuid = { version = "1.18.1", features = ["v4"] }
 walkdir = "2.5.0"
 
 [dev-dependencies]
